package com.evia.portal.userportal.core.domain.enumeration;

public enum NotificationSource {

    AUTHENTICATION,
    APPLICATION,
    COMMENT
}
